# Rust-parallel-experiment

AtCoder/: 00  00.rs  01  01.rs  02  02.rs  03  03.rs  03_ans  03_ans.rs  04  04.rs  05  05.rs  06  06.rs  07  07.rs  08  08.rs  09  09.rs  10  10.rs  template.rs
Demo/: 1  1.rs  2  2.rs  3.rs  4  4.rs
arithmetic_progression/: Cargo.toml
arithmetic_progression/examples/: benchmark.rs
arithmetic_progression/src/: lib.rs  main.rs  par_arithmetic_progression.rs  seq_arithmetic_progression.rs
bitonic-sorter/: Cargo.toml
bitonic-sorter/examples/: benchmark.rs  benchmark2.rs
bitonic-sorter/src/: first.rs  fourth.rs  lib.rs  second.rs  third.rs  utils.rs
eratosthenes/: Cargo.toml
insertion_sort/: Cargo.toml
mandelbrot/: Cargo.toml
n-queens/: Cargo.toml
rust-parallel-benchmark/: README.md
rust-parallel-benchmark/aggregating_points/: Cargo.toml
rust-parallel-benchmark/aggregating_points/src/: aggregate.rs  bench.rs  main.rs  utils.rs
rust-parallel-benchmark/aggregating_points/tests/: bench1.in  bench1.out  bench2.out  test1.in  test1.out
rust-parallel-benchmark/quicksort/: Cargo.toml
rust-parallel-benchmark/quicksort/src/: bench.rs  main.rs  quicksort.rs  utils.rs
rust-parallel-benchmark/quicksort/tests/: bench2.in  bench2.out  bench3.in  bench3.out  bench4.in  bench4.out
sandbox/: FizzBuzz.rs  a.out  bitonic2.csv  bitonic2_1.csv  bitonic3.csv  bitonic3_1.csv  bitonic4.csv  bitonic4_1.csv  bitonic5.csv  channel  channel.rs  eratosthenes  eratosthenes.rs  hello  hello.cpp  hello.s  list  list.rs  mutex  mutex.rs  scan  scan.cpp
(+49 files in other folders)
