[package]
name = "aggregating_points"
version = "0.1.0"
authors = ["YunosukeY <yunosuke@ueda.info.waseda.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"